# joinmarket-v2

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  DOCS.md  README.md  docker-compose.yml  pytest.ini
.github/workflows/: docker.yaml  test.yaml
directory_server/: .env.example  README.md  docker-compose.yml  pyproject.toml  requirements.txt
directory_server/tests/: test_cli.py  test_handshake_handler.py  test_health.py  test_load.py  test_monitoring.py  test_peer_registry.py  test_rate_limiter.py  test_server_send_failure.py
jmcore/: pyproject.toml  requirements.txt
jmcore/src/jmcore/: __init__.py  bond_calc.py  constants.py  crypto.py  directory_client.py  models.py  network.py  podle.py  protocol.py
jmcore/tests/: test_bond_calc.py  test_crypto.py  test_models.py  test_podle.py  test_protocol.py
jmwallet/: README.md  pyproject.toml
jmwallet/tests/: test_backends.py  test_history.py  test_signing.py
maker/: Dockerfile  README.md  pyproject.toml
maker/tests/: conftest.py  test_bot.py  test_config.py  test_fidelity.py
neutrino_server/: Dockerfile  go.mod
orderbook_watcher/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.in  requirements.txt
orderbook_watcher/static/: app.js  style.css
orderbook_watcher/tests/: conftest.py  test_directory_status.py  test_ow_config.py  test_server_uptime.py
scripts/: fund-test-wallets.sh  generate_fidelity_bond_address.py  regtest-miner-jam.sh  regtest-miner.sh  run_all_tests.sh
taker/: Dockerfile  README.md  pyproject.toml
taker/tests/: conftest.py  test_broadcast.py  (+6 more)
tests/: __init__.py
(+57 files in other folders)
