[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jmcore"
version = "2.1.0"
description = "Core library for JoinMarket components"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "JoinMarket Contributors"}
]
license = {text = "GPL-3.0"}
dependencies = [
    "pydantic>=2.5.0",
    "loguru>=0.7.2",
    "coincurve==20.0.0",
    "python-bitcointx>=1.1.5",
    "httpx>=0.27.0",
    "httpx-socks>=0.9.0",
    "PySocks>=1.7.1",
    "sniffio>=1.3.0",
    "libnacl>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=jmcore --cov-report=html --cov-report=term"
